--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <title>ENSITECH-SCHOOL</title>
   </head>
   <body>
@@ -40,24 +40,23 @@
                                     <div class="text-center pt-1 mb-5 pb-1">
                                         <button data-mdb-button-init data-mdb-ripple-init
                                             class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                                            type="button">Log
+                                            type="button" id="button-login">Log
                                             in</button>
-                                        <a class="text-muted" href="#!">Forgot password?</a>
+                                        <a class="text-muted" href="forgetPassword.html">Forgot password?</a>
                                     </div>
 
-                                    <div class="d-flex align-items-center justify-content-center pb-4">
+                                     <div class="d-flex align-items-center justify-content-center pb-4">
                                         <p class="mb-0 me-2">Don't have an account?</p>
                                         <button type="button" data-mdb-button-init data-mdb-ripple-init
-                                            class="btn btn-outline-danger">Create new</button>
+                                            class="btn btn-outline-danger" id="button-create" onclick="">Create new</button>
                                     </div>
-
                                 </form>
 
                             </div>
                         </div>
                         <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
                             <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                                <h4 class="mb-4">We are more than just a school, we are familly</h4>
+                                <h4 class="mb-4">We are more than just a school, we are familly ENSITECH</h4>
                                 <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                                     eiusmod
                                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
